# trelctrl

./: .env.example  .gitignore  .pymarkdown.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_boards.py  test_client.py  test_commands.py  test_labels.py  test_lists.py  test_parser.py
trelctl/: main.py  parser.py
trelctl/commands/: create_board.py  delete_cards.py  delete_labels.py  delete_lists.py  get_cards.py  get_lists.py  get_members.py  import_cards.py  import_lists.py
trelctl/trello/: boards.py  cards.py  client.py  labels.py  lists.py
